completed the work page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Juans Work</title>
+	<link rel="shortcut icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Poller+One|Raleway" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
+	<nav>
+		<ul>
+			<li><a href="#" class="link" data-page="home">home</a></li>
+			<li><a href="#" class="link" data-page="about">about</a></li>
+			<li><a href="#" class="link" data-page="work">work</a></li>
+			<li><a href="#" class="link" data-page="contact">contact</a></li>
+		</ul>
+	</nav>
+	<section class="panel" id="home">Home</section>
+	<section class="panel" id="about">About</section>
+	<section class="panel active" id="work">
+		<content>
+			<ul class="skills">
+				<li class="filter active-filter" data-show='all'>All</li>
+				<li class="filter" data-show="react">React</li>
+				<li class="filter" data-show="angular">Angular</li>
+				<li class="filter" data-show="jquery">jQuery</li>
+				<li class="filter" data-show="wordpress">WordPress</li>
+				<li class="filter" data-show="vanilla">Vanilla</li>
+			</ul>
+			<ul id="project-list">
 
+			</ul>
+		</content>
+	</section>
+	<section class="panel" id="contact">Contact</section>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="script/script.js"></script>
 </body>
 </html>
