completed jquery portfolio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- <div id="black-screen"></div> -->
 	<nav>
 		<ul>
-			<li><a href="#" class="link" data-page="home">home</a></li>
+			<li><a href="#" class="link active-page" data-page="home">home</a></li>
 			<li><a href="#" class="link" data-page="about">about</a></li>
 			<li><a href="#" class="link" data-page="work">work</a></li>
 			<li><a href="#" class="link" data-page="contact">contact</a></li>
@@ -130,7 +130,14 @@
 			</ul>
 		</content>
 	</section>
-	<section class="panel" id="contact">Contact</section>
+	<div class="contact-modal">
+		<div class="content">
+			<span id="close-modal">Close</span>
+			JuanArcin@gmail.com
+			<a href="https://www.linkedin.com/in/juanarciniega" target="_blank">linkedin.com/in/juanarciniega</a>
+			<a href="https://github.com/juanarcin" target="_blank">github.com/juanarcin</a>
+		</div>
+	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
